--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="col-xl-9 d-flex align-items-center justify-content-lg-between">
           <h1 class="logo me-auto me-lg-0"><a href="index.html">Smart Waste Bin</a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
-          <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+          <a href="index.html" class="logo me-auto me-lg-0"><img src="img/logo.png" alt="" class="img-fluid"></a>
 
           <nav id="navbar" class="navbar order-last order-lg-0">
             <ul>
@@ -106,7 +106,7 @@
           <h1>Smart Waste Bin - Efficient Waste Management System</h1>
           <h2>To enhance environmental sustainability and quality of life.</h2>
           <!--<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a>-->
-          <a href="assets/img/MetalsDetection.mp4" class="glightbox play-btn mb-4"></a>
+          <a href="img/MetalsDetection.mp4" class="glightbox play-btn mb-4"></a>
         </div>
       </div>
     </div>
