--- a/index.html
+++ b/index.html
@@ -1528,7 +1528,7 @@
 
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
