--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <h1>Smart Waste Bin - Efficient Waste Management System</h1>
           <h2>To enhance environmental sustainability and quality of life.</h2>
           <!--<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a>-->
-          <a href="img/MetalsDetection.mp4" class="glightbox play-btn mb-4"></a>
+          <a href="img/Smart Bin Presentation.mp4" class="glightbox play-btn mb-4"></a>
         </div>
       </div>
     </div>
